--- a/puppycompanyblog/templates/index.html
+++ b/puppycompanyblog/templates/index.html
@@ -1,6 +1,25 @@
 {% extends "base.html" %}
 {% block content %}
-  <div class="jumbotron">
-    <h1>Puppy Company Blog</h1>
+<div class="jumbotron">
+  <h1>Puppy Company Blog</h1>
+</div>
+
+<div class="container">
+
+  {% for post in blog_posts.items %}
+
+  <div class="card">
+
+    <div class="card-body">
+      <h5 class="card-title"> {{post.title}}</h5>
+      <p class="card-text">{{post.date.strftime('%Y-%m-%d')}}</p>
+      <p class="card-text">{{post.author}}</p>
+      <p class="card-text">{{post.text}}</p>
+    </div>
   </div>
+
+</div>
+
+{% endfor %}
+
 {% endblock %}
