--- a/puppycompanyblog/templates/index.html
+++ b/puppycompanyblog/templates/index.html
@@ -20,6 +20,27 @@
 
 </div>
 
+
+
+
+
 {% endfor %}
+<!-- <div class="row"> -->
+  <nav aria-label='Page Navigation example'>
+    <ul class="pagination justify-content-center">
+      {% for page_num in blog_posts.iter_pages(left_edge=1,right_edge=1,left_current=1,right_current=2)  %}
+      {% if blog_posts.page == page_num %}
+      <li class='page-item disabled'>
+        <a class="page-link" href="{{url_for('core.index',page=page_num)}}">{{ page_num }}</a>
+      </li>
+      {% else %}
+      <li class='page-item'>
+        <a class="page-link" href="{{url_for('core.index',page=page_num)}}">{{ page_num }}</a>
+      </li>
+      {% endif %}
+      {% endfor %}
+    </ul>
+  </nav>
+<!-- </div> -->
 
 {% endblock %}
