--- a/puppycompanyblog/templates/user_blog_posts.html
+++ b/puppycompanyblog/templates/user_blog_posts.html
@@ -10,7 +10,7 @@
   </div>
 
   <div class="row">
-    {% for post in blog_post.items  %}
+    {% for post in blog_posts.items  %}
     <h2> <a href="{{url_for('blog_posts.blog_post',blog_post_id=post.id)}}">{{post.title}}</a> </h2>
     Written By: <a href="{{url_for('users.user_post',username=post.author.username)}}">{{post.author.username}}</a>
     <p class='text-muted'>Published on: {{post.date.strftime("%Y-%m-%d")}}</p>
