--- a/puppycompanyblog/templates/blog_post.html
+++ b/puppycompanyblog/templates/blog_post.html
@@ -8,7 +8,7 @@
   </div>
 
   <div class="row">
-    <h1>Author: {{blog_post.author}}</h1>
+    <h1>Author: {{blog_post.author.username}}</h1>
   </div>
 
   <div class="row">
@@ -21,8 +21,8 @@
 
   {% if blog_post.author == current_user %}
   <div class="row">
-    < a href="{{url_for('blog_posts.update, blog_post_id=blog_post.id')}}">Update</a>
-
+    < a class="btn btn-secondary" href="{{ url_for('blog_posts.update, blog_post_id=blog_post.id') }}">Update</a>
+    <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#del_modal">Delete</button>
   </div>
 
   <div class="row">
@@ -42,7 +42,7 @@
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
 
-            <form action="{{url_for('blog_posts.delete_post',blog_post_id=blog_post.id)}}" method="post">
+            <form action="{{ url_for('blog_posts.delete_post',blog_post_id=blog_post.id) }}" method="POST">
               <input class="btn btn-danger" type="submit" value="Delete">
             </form>
 
