--- a/puppycompanyblog/templates/index.html
+++ b/puppycompanyblog/templates/index.html
@@ -9,9 +9,11 @@
   {% for post in blog_posts.items %}
 
   <div class="card">
-
     <div class="card-body">
-      <h5 class="card-title"> {{post.title}}</h5>
+
+      <h3> <a class="card-title" href="{{ url_for('blog_posts.blog_post', blog_post_id=post.id) }}"> {{post.title}}</a></h3>
+
+
       <p class="card-text">{{post.date.strftime('%Y-%m-%d')}}</p>
       <p class="card-text">{{post.author}}</p>
       <p class="card-text">{{post.text}}</p>
