--- a/puppycompanyblog/templates/index.html
+++ b/puppycompanyblog/templates/index.html
@@ -11,20 +11,18 @@
   <div class="card">
     <div class="card-body">
 
-      <h3> <a class="card-title" href="{{ url_for('blog_posts.blog_post', blog_post_id=post.id) }}"> {{post.title}}</a></h3>
+      <h3> <a class="card-title" href="{{ url_for('blog_posts.blog_post', blog_post_id=post.id) }}">Title:  {{post.title}}</a></h3>
 
+      <a href="{{ url_for('users.user_posts', username=post.author.username)}}">Author: {{ post.author.username }}</a>
 
-      <p class="card-text">{{post.date.strftime('%Y-%m-%d')}}</p>
-      <p class="card-text">{{post.author}}</p>
-      <p class="card-text">{{post.text}}</p>
+      <p>{{post.date.strftime('%Y-%m-%d')}}</p>
+
+      <p class="card-text">{{post.text[:25]}}...</p>
+      <a href="{{ url_for('blog_posts.blog_post', blog_post_id=post.id)}}" class="btn btn-primary">Read this blog post</a>
     </div>
   </div>
 
 </div>
-
-
-
-
 
 {% endfor %}
 <!-- <div class="row"> -->
