--- a/puppycompanyblog/templates/login.html
+++ b/puppycompanyblog/templates/login.html
@@ -2,22 +2,29 @@
 
 {% block content %}
 <div class="container">
-  <h1>Login</h1>
+
+  <div class="row">
+    <h1>Login</h1>
+  </div>
 
   <div class="row">
 
-
-    <form method="post">
+    <form class="form-group" method="post">
       {{ form.hidden_tag() }}
 
-      {{form.email.label }} {{ form.email() }}
-      <br>
+      <div class="form-group">
+        {{form.email.label(class="form-control-label") }} {{ form.email(class="form-control form-control-lg") }}
+      </div>
 
-      {{form.password.label }} {{ form.password() }}
-      <br>
 
-      <br>
-      {{ form.submit() }}
+      <div class="form-group">
+        {{form.password.label(class="form-control-label") }} {{ form.password(class="form-control form-control-lg") }}
+
+      </div>
+
+      <div class="form-group">
+        {{ form.submit(class="btn btn-outline-info") }}
+      </div>
 
 
     </form>
