--- a/puppycompanyblog/templates/register.html
+++ b/puppycompanyblog/templates/register.html
@@ -2,29 +2,40 @@
 
 {% block content %}
 
-<div class="">
-  <h1>Register</h1>
+<div class="container">
 
-  <div class="">
+  <div class="row">
+    <h1>Register</h1>
+  </div>
 
+  <div class="row">
 
-    <form method="post">
+    <form class="form-group" method="POST">
+
       {{ form.hidden_tag() }}
 
-      {{form.email.label }} {{ form.email() }}
-      <br>
+      <div class="form-group">
+        {{form.email.label(class="form-control-label") }} {{ form.email(class="form-control form-control-lg") }}
+      </div>
 
-      {{form.username.label }} {{ form.username() }}
+      <div class="form-group">
+        {{form.username.label(class="form-control-label") }} {{ form.username(class="form-control form-control-lg") }}
+      </div>
 
-      {{form.password.label }} {{ form.password() }}
-      <br>
+      <div class="form-group">
+        {{form.password.label(class="form-control-label") }} {{ form.password(class="form-control form-control-lg") }}
+      </div>
 
-      {{form.password_confirm.label }} {{ form.password_confirm() }}
-      <br>
-      {{ form.submit() }}
-    </div>
+      <div class="form-group">
+        {{form.password_confirm.label(class="form-control-label") }} {{ form.password_confirm(class="form-control form-control-lg") }}
+      </div>
 
-  </form>
+      <div class="form-group">
+        {{ form.submit(class="btn btn-outline-info") }}
+      </div>
+
+    </form>
+  </div>
 
 
 </div>
