--- a/puppycompanyblog/templates/blog_post.html
+++ b/puppycompanyblog/templates/blog_post.html
@@ -21,8 +21,8 @@
 
   {% if blog_post.author == current_user %}
   <div class="row">
-    < a class="btn btn-secondary" href="{{ url_for('blog_posts.update, blog_post_id=blog_post.id') }}">Update</a>
-    <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#del_modal">Delete</button>
+    <a class="btn btn-secondary" href="{{ url_for('blog_posts.update', blog_post_id=blog_post.id) }}">Update</a><br>
+    <!-- <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#del_modal">Delete</button> -->
   </div>
 
   <div class="row">
@@ -58,4 +58,4 @@
 
 
 
-{% extends block %}
+{% endblock %}
