--- a/puppycompanyblog/templates/index.html
+++ b/puppycompanyblog/templates/index.html
@@ -1,31 +1,48 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="jumbotron">
-  <h1>Puppy Company Blog</h1>
-</div>
+
 
 <div class="container">
 
-  {% for post in blog_posts.items %}
-
-  <div class="card">
-    <div class="card-body">
-
-      <h3> <a class="card-title" href="{{ url_for('blog_posts.blog_post', blog_post_id=post.id) }}">Title:  {{post.title}}</a></h3>
-
-      <a href="{{ url_for('users.user_posts', username=post.author.username)}}">Author: {{ post.author.username }}</a>
-
-      <p>{{post.date.strftime('%Y-%m-%d')}}</p>
-
-      <p class="card-text">{{post.text[:25]}}...</p>
-      <a href="{{ url_for('blog_posts.blog_post', blog_post_id=post.id)}}" class="btn btn-primary">Read this blog post</a>
-    </div>
+  <div class="row">
+    <h1>Puppy Company Blog</h1>
   </div>
 
+  <div class="row row-cols-1 row-cols-md-2 card-deck">
+
+        <!-- <div class="col mb-4"> -->
+
+      {% for post in blog_posts.items %}
+
+      <!-- <div class="row"> -->
+
+
+        <div class="card border-primary">
+          <div class="card-body">
+
+            <h3> <a class="card-title" href="{{ url_for('blog_posts.blog_post', blog_post_id=post.id) }}">Title:  {{post.title}}</a></h3>
+
+            <a href="{{ url_for('users.user_posts', username=post.author.username)}}">Author: {{ post.author.username }}</a>
+
+            <p>{{post.date.strftime('%Y-%m-%d')}}</p>
+
+            <p class="card-text">{{post.text[:25]}}...</p>
+            <a href="{{ url_for('blog_posts.blog_post', blog_post_id=post.id)}}" class="btn btn-primary">Read this blog post</a>
+          </div>
+        </div>
+      <!-- </div> -->
+
+
+      {% endfor %}
+
+    <!-- </div> -->
+
+  </div>
+
+<div class="row">
+  <br>
 </div>
 
-{% endfor %}
-<!-- <div class="row"> -->
   <nav aria-label='Page Navigation example'>
     <ul class="pagination justify-content-center">
       {% for page_num in blog_posts.iter_pages(left_edge=1,right_edge=1,left_current=1,right_current=2)  %}
@@ -41,6 +58,6 @@
       {% endfor %}
     </ul>
   </nav>
-<!-- </div> -->
 
+</div>
 {% endblock %}
