--- a/puppycompanyblog/templates/account.html
+++ b/puppycompanyblog/templates/account.html
@@ -4,7 +4,7 @@
 <div class="container">
   <h1>Account Details for {{current_user.username}}</h1>
 
-  <img src="{{url_for('static',filename='profile_pics/'+current_user.profile_image)}}" alt="{{current_user.username}}">
+  <img src="{{url_for('static',filename='profile_pics/'+current_user.profile_image)}}" alt="{{current_user.username}}" height="300">
   <div class="row">
 
     <!-- in the form, use enctype to update the image -->
