--- a/puppycompanyblog/templates/account.html
+++ b/puppycompanyblog/templates/account.html
@@ -2,37 +2,50 @@
 
 {% block content %}
 <div class="container">
-  <h1>Account Details for {{current_user.username}}</h1>
-
-  <img src="{{url_for('static',filename='profile_pics/'+current_user.profile_image)}}" alt="{{current_user.username}}" height="300">
   <div class="row">
+    <h1>Account Details for {{current_user.username}}</h1>
+  </div>
 
-    <!-- in the form, use enctype to update the image -->
-    <form class="form-group" method="POST" action="" enctype="multipart/form-data">
-      {{ form.hidden_tag() }}
+  <div class="row justify-content-between">
+
+
+    <div class="col-4">
+
+      <img src="{{url_for('static',filename='profile_pics/'+current_user.profile_image)}}" alt="{{current_user.username}}" height="300">
+      </div>
+
+
+      <div class="col-6 border bg-light">
+
+        <!-- in the form, use enctype to update the image -->
+        <form class="form-group" method="POST" action="" enctype="multipart/form-data">
+          {{ form.hidden_tag() }}
+
+
+        <div class="form-group">
+          {{form.username.label(class="form-control-label") }} {{ form.username(class="form-control form-control-lg") }}
+          <br>
+        </div>
+
+        <div class="form-group">
+          {{form.email.label(class="form-control-label") }} {{ form.email(class="form-control form-control-lg") }}
+          <br>
+        </div>
+
+        <div class="form-group">
+          {{form.picture.label(class="form-control-label") }} {{ form.picture(class="form-control form-control-file") }}
+          <br>
+        </div>
+
+        <div class="form-group">
+          {{ form.submit(class="btn btn-primary") }}
+        </div>
+
+      </form>
+      </div>
     </div>
 
-    <div class="form-group">
-      {{form.username.label(class="form-control-label") }} {{ form.username(class="form-control form-control-lg") }}
-      <br>
-    </div>
+  </div>
 
-    <div class="form-group">
-      {{form.email.label(class="form-control-label") }} {{ form.email(class="form-control form-control-lg") }}
-      <br>
-    </div>
 
-    <div class="form-group">
-      {{form.picture.label(class="form-control-label") }} {{ form.picture(class="form-control form-control-file") }}
-      <br>
-    </div>
-
-    <div class="form-group">
-      {{ form.submit(class="btn btn-outline-info") }}
-    </div>
-
-  </form>
-</div>
-
-</div>
 {% endblock %}
