--- a/puppycompanyblog/templates/index.html
+++ b/puppycompanyblog/templates/index.html
@@ -2,13 +2,22 @@
 {% block content %}
 
 
-<div class="container">
+<div class="container home">
 
-  <div class="row">
+  <div class="row justify-content-center">
     <h1>Puppy Company Blog</h1>
   </div>
+  <div class="row justify-content-center">
+    <img align='center' src="{{ url_for('static', filename='/puppies_home.png') }}" height="300" width=60%>
+    </div>
+
+    <div class="row">
+      <br>
+    </div>
 
   <div class="row row-cols-1 row-cols-md-2 card-deck">
+
+
 
         <!-- <div class="col mb-4"> -->
 
