--- a/puppycompanyblog/templates/user_blog_posts.html
+++ b/puppycompanyblog/templates/user_blog_posts.html
@@ -3,40 +3,62 @@
 
 <div class="container">
 
+      <div class="row justify-content-center">
+          <h1>Blogs for {{ user.username }}</h1>
+          </div>
+          <div class="row justify-content-center">
+      <img src="{{ url_for('static',filename='profile_pics/'+user.profile_image) }}" height="200" width="250" alt="">
 
-  <div class="row">
-    <h1>Blogs for {{ user.username }}</h1>
-    <img src="{{ url_for('static',filename='profile_images/'+user.profile_image) }}" alt="">
-  </div>
+    </div>
 
-  <div class="row">
-    {% for post in blog_posts.items  %}
-    <h2> <a href="{{url_for('blog_posts.blog_post',blog_post_id=post.id)}}">{{post.title}}</a> </h2>
-    Written By: <a href="{{url_for('users.user_posts',username=post.author.username)}}">{{post.author.username}}</a>
-    <p class='text-muted'>Published on: {{post.date.strftime("%Y-%m-%d")}}</p>
-    <br>
-    <p>{{post.text}}</p>
-    <br>
-    {% endfor %}
-  </div>
+<div class="row">
+<br>
+</div>
 
-<!-- find the following on Bootstrap docs page -->
-  <nav aria-label='Page Navigation example'>
-    <ul class="pagination justify-content-center">
-      {% for page_num in blog_posts.iter_pages(left_edge=1,right_edge=1,left_current=1,right_current=2)  %}
-      {% if blog_posts.page == page_num %}
-      <li class='page-item disabled'>
-        <a class="page-link" href="{{url_for('users.user_posts',username=user.username,page=page_num)}}">{{ page_num}}</a>
-      </li>
-      {% else %}
-      <li class='page-item'>
-        <a class="page-link" href="{{url_for('users.user_posts',username=user.username,page=page_num)}}">{{ page_num}}</a>
-      </li>
-      {% endif %}
-      {% endfor %}
-    </ul>
+    <div class="row">
 
-  </nav>
+      <div class="row row-cols-1 row-cols-md-2 card-deck">
+
+        {% for post in blog_posts.items  %}
+
+
+        <div class="card border-primary text-center">
+
+            <div class="card-header">
+            <h2> <a href="{{ url_for('blog_posts.blog_post',blog_post_id=post.id) }}">{{post.title}}</a> </h2>
+            </div>
+
+            <div class="card-body">
+              <h5 class="card-title">
+            Written By: <a href="{{ url_for('users.user_posts',username=post.author.username) }}">{{post.author.username}}</a></h5>
+            <p class='text-muted'>Published on: {{post.date.strftime("%Y-%m-%d")}}</p>
+            <p>{{post.text}}</p>
+          </div>
+
+        </div>
+        {% endfor %}
+
+      </div>
+
+    </div>
+
+    <!-- find the following on Bootstrap docs page -->
+
+      <nav aria-label='Page Navigation example'>
+        <ul class="pagination justify-content-center">
+          {% for page_num in blog_posts.iter_pages(left_edge=1,right_edge=1,left_current=1,right_current=2) %}
+          {% if blog_posts.page == page_num %}
+          <li class='page-item disabled'>
+            <a class="page-link" href="{{url_for('users.user_posts',username=user.username,page=page_num)}}">{{ page_num}}</a>
+          </li>
+          {% else %}
+          <li class='page-item'>
+            <a class="page-link" href="{{url_for('users.user_posts',username=user.username,page=page_num)}}">{{ page_num}}</a>
+          </li>
+          {% endif %}
+          {% endfor %}
+        </ul>
+      </nav>
 
 </div>
 {% endblock %}
