--- a/puppycompanyblog/templates/blog_post.html
+++ b/puppycompanyblog/templates/blog_post.html
@@ -4,55 +4,65 @@
 
 <div class="container">
   <div class="row">
-    <h1>Title: {{ blog_post.title }}</h1>
-  </div>
 
-  <div class="row">
-    <h1>Author: {{ blog_post.author.username }}</h1>
-  </div>
+    <div class="card border-primary text-center">
 
-  <div class="row">
-    <h1>Date: {{ blog_post.date.strftime('%d, %B, %Y') }}</h1>
-  </div>
+      <div class="card-header">
+        <h1>Title: {{ blog_post.title }}</h1>
+      </div>
 
-  <div class="row">
-    <p>{{ blog_post.text }}</p>
-  </div>
+      <div class="card-body">
+        <h5>Author: {{ blog_post.author.username }}</h5>
+        <h5>Date: {{ blog_post.date.strftime('%d, %B, %Y') }}</h5>
 
-  {% if blog_post.author == current_user %}
-  <div class="row">
-    <a class="btn btn-secondary" href="{{ url_for('blog_posts.update', blog_post_id=blog_post.id) }}">Update</a><br>
-    <!-- <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#del_modal">Delete</button> -->
-  </div>
-
-  <div class="row">
-    <button type="button" class="btn btn-danger" data-toggle='modal' data-target="#del_modal">Delete</button>
-    <div class="modal" tabindex="-1" role="dialog" id="del_modal">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title">Delete Post?</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <p>Are you sure you want to delete the post?</p>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-
-            <form action="{{ url_for('blog_posts.delete_post',blog_post_id=blog_post.id) }}" method="POST">
-              <input class="btn btn-danger" type="submit" value="Delete">
-            </form>
-          </div>
+        <div class="card-text">
+          <p>{{ blog_post.text }}</p>
         </div>
       </div>
+
+      <div class="card-footer">
+
+        {% if blog_post.author == current_user %}
+        <div class="row">
+          <div class="col">
+          <a class="btn btn-secondary" href="{{ url_for('blog_posts.update', blog_post_id=blog_post.id) }}">Update</a>
+          <!-- <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#del_modal">Delete</button> -->
+        </div>
+
+        <div class="col">
+          <button type="button" class="btn btn-danger" data-toggle='modal' data-target="#del_modal">Delete</button>
+          <div class="modal" tabindex="-1" role="dialog" id="del_modal">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title">Delete Post?</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <p>Are you sure you want to delete the post?</p>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+
+                  <form action="{{ url_for('blog_posts.delete_post',blog_post_id=blog_post.id) }}" method="POST">
+                    <input class="btn btn-danger" type="submit" value="Delete">
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+          {% endif %}
+
+      </div>
+
     </div>
   </div>
 
-  {% endif %}
-
+</div>
 </div>
 
 
