--- a/puppycompanyblog/templates/blog_post.html
+++ b/puppycompanyblog/templates/blog_post.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="container">
-  <div class="row">
+  <div class="row justify-content-center">
 
     <div class="card border-primary text-center">
 
