--- a/puppycompanyblog/templates/create_post.html
+++ b/puppycompanyblog/templates/create_post.html
@@ -18,7 +18,7 @@
     {{ form.text.label(class="form-control-label") }} {{ form.text(class="form-control form-control-lg") }}
 
     <div class="form-group">
-      {{ form.submit(class="btn btn-outline-info") }}
+      {{ form.submit(class="btn btn-primary") }}
     </div>
 
   </form>
