--- a/puppycompanyblog/templates/blog_post.html
+++ b/puppycompanyblog/templates/blog_post.html
@@ -25,7 +25,7 @@
         {% if blog_post.author == current_user %}
         <div class="row">
           <div class="col">
-          <a class="btn btn-secondary" href="{{ url_for('blog_posts.update', blog_post_id=blog_post.id) }}">Update</a>
+          <a class="btn btn-primary" href="{{ url_for('blog_posts.update', blog_post_id=blog_post.id) }}">Update</a>
           <!-- <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#del_modal">Delete</button> -->
         </div>
 
