--- a/puppycompanyblog/templates/login.html
+++ b/puppycompanyblog/templates/login.html
@@ -23,7 +23,7 @@
       </div>
 
       <div class="form-group">
-        {{ form.submit(class="btn btn-outline-info") }}
+        {{ form.submit(class="btn btn-primary") }}
       </div>
 
 
