--- a/puppycompanyblog/templates/info.html
+++ b/puppycompanyblog/templates/info.html
@@ -1,7 +1,15 @@
 {% extends "base.html" %}
 {% block content %}
-  <div class="jumbotron">
-    <h1>Info about our company</h1>
+<div class="container">
+
+  <div class="row">
+    <br>
+  </div>
+
+  <div class="row justify-content-center border bg-light">
+    <h1>About our company</h1>
     <p>We love puppies!! We're guessing you love them, too, and so we've created this website for you to share your puppy-related pictures and stories.</p>
   </div>
+
+</div>
 {% endblock %}
