--- a/puppycompanyblog/templates/create_post.html
+++ b/puppycompanyblog/templates/create_post.html
@@ -4,18 +4,17 @@
 
 <div class="container">
 
-
-
-  <form class="form-group" method="POST">
+  <form class="form-group border bg-light" method="POST">
 
     {{ form.hidden_tag() }}
 
     <div class="form-group">
-
-
       {{ form.title.label(class="form-control-label") }} {{ form.title(class="form-control form-control-lg") }}
     </div>
-    {{ form.text.label(class="form-control-label") }} {{ form.text(class="form-control form-control-lg") }}
+
+    <div class="form-group">
+    {{ form.text.label(class="form-control-label") }} {{ form.text(class="form-control form-control-lg", rows="5") }}
+    </div>
 
     <div class="form-group">
       {{ form.submit(class="btn btn-primary") }}
