--- a/puppycompanyblog/templates/index.html
+++ b/puppycompanyblog/templates/index.html
@@ -26,7 +26,7 @@
       <!-- <div class="row"> -->
 
 
-        <div class="card border-primary">
+        <div class="card border-primary homecard">
           <div class="card-body">
 
             <h3> <a class="card-title" href="{{ url_for('blog_posts.blog_post', blog_post_id=post.id) }}">Title:  {{post.title}}</a></h3>
