--- a/puppycompanyblog/templates/login.html
+++ b/puppycompanyblog/templates/login.html
@@ -3,13 +3,13 @@
 {% block content %}
 <div class="container">
 
-  <div class="row">
+  <div class="row justify-content-center">
     <h1>Login</h1>
   </div>
 
-  <div class="row">
+  <div class="row justify-content-center">
 
-    <form class="form-group" method="post">
+    <form class="form-group border bg-light" method="post">
       {{ form.hidden_tag() }}
 
       <div class="form-group">
