--- a/puppycompanyblog/templates/register.html
+++ b/puppycompanyblog/templates/register.html
@@ -4,13 +4,13 @@
 
 <div class="container">
 
-  <div class="row">
+  <div class="row justify-content-center">
     <h1>Register</h1>
   </div>
 
-  <div class="row">
+  <div class="row justify-content-center">
 
-    <form class="form-group" method="POST">
+    <form class="form-group border bg-light" method="POST">
 
       {{ form.hidden_tag() }}
 
