--- a/puppycompanyblog/templates/register.html
+++ b/puppycompanyblog/templates/register.html
@@ -6,6 +6,7 @@
 
   <div class="row justify-content-center">
     <h1>Register</h1>
+    <<p>Please use a dummy email and password.</p>
   </div>
 
   <div class="row justify-content-center">
