starting a simpler way to do a carousel

--- a/puppycompanyblog/templates/info.html
+++ b/puppycompanyblog/templates/info.html
@@ -11,5 +11,9 @@
     <p>We love puppies!! We're guessing you love them, too, and so we've created this website for you to share your puppy-related pictures and stories.</p>
   </div>
 
+  <div class="row">
+    <img src="{{url_for('static',filename='carousel/'+puppy1.png)}}" alt="puppy1" height="300">
+  </div>
+
 </div>
 {% endblock %}
