updates readme, adds note to registration form

--- a/puppycompanyblog/templates/register.html
+++ b/puppycompanyblog/templates/register.html
@@ -6,6 +6,7 @@
 
   <div class="row justify-content-center">
     <h1>Register</h1>
+    <p>Please use dummy emails and passwords</p>
   </div>
 
   <div class="row justify-content-center">
