--- a/puppycompanyblog/templates/register.html
+++ b/puppycompanyblog/templates/register.html
@@ -6,6 +6,9 @@
 
   <div class="row justify-content-center">
     <h1>Register</h1>
+  </div>
+
+  <div class="row justify-content-center">
     <p>Please use dummy emails and passwords</p>
   </div>
 
